--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "quang",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mqtt": "^4.2.6",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.0.1"
   }
 }
